# betsy

./: .clang-format  .gitmodules  .hgignore  CMakeLists.txt  LICENSE  LICENSE.md  README.md  build_Visual_Studio_16_2019_x64.bat
CMake/: Bootstrap.cmake
CMake/Dependencies/: sdl2-config.cmake
Dependencies/: CMakeLists.txt
Dependencies/FreeImage/: CMakeLists.txt  README.iphone
Dependencies/FreeImage/Source/FreeImage/: GetType.cpp  MultiPage.cpp  PluginDDS.cpp  PluginGIF.cpp  PluginPCX.cpp  PluginTIFF.cpp
Dependencies/FreeImage/Source/FreeImageToolkit/: Background.cpp
Dependencies/FreeImage/Source/LibJPEG/: LibJPEG.2013.vcxproj.filters  LibJPEG.2017.vcxproj
Dependencies/FreeImage/Source/LibOpenJPEG/: LibOpenJPEG.2013.vcxproj  LibOpenJPEG.2013.vcxproj.filters  phix_manager.c  thix_manager.c
Dependencies/FreeImage/Source/LibPNG/: INSTALL  LibPNG.2017.vcxproj  LibPNG.2017.vcxproj.filters  README  example.c  libpng-manual.txt  libpng.3  libpngpf.3
Dependencies/FreeImage/Source/LibTIFF4/: LibTIFF4.2013.vcxproj  LibTIFF4.2017.vcxproj.filters  t4.h  tif_close.c  tif_codec.c  tif_color.c  tif_compress.c  tif_config.h.cmake.in  (+23 more)
Docs/: technical_doc_advanced.md
cmake/: Bootstrap.cmake
contrib/: CMakeLists.txt
contrib/FreeImage/: CMakeLists.txt  README.md  Whatsnew.txt
contrib/FreeImage/Source/: CacheFile.h
contrib/FreeImage/Source/FreeImage/: BitmapAccess.cpp  CacheFile.cpp  Plugin.cpp  PluginBMP.cpp
contrib/FreeImage/Source/LibJPEG/: LibJPEG.2013.vcxproj
contrib/FreeImage/Source/LibOpenJPEG/: LibOpenJPEG.2017.vcxproj  cidx_manager.c  opj_includes.h  ppix_manager.c  tpix_manager.c
contrib/FreeImage/Source/LibPNG/: ANNOUNCE  CHANGES  CMakeLists.txt  LICENSE  LibPNG.2013.vcxproj  configure
contrib/FreeImage/Source/LibTIFF4/: CMakeLists.txt  ChangeLog  LibTIFF4.2017.vcxproj  mkg3states.c  mkspans.c  tif_aux.c  tif_config.h  tif_config.vc.h  tif_dir.c  tif_dirinfo.c  tif_dirread.c  tif_dirwrite.c  tif_dumpmode.c  tif_extension.c  tif_fax3.h  tif_flush.c  tif_getimage.c  tif_jbig.c  tif_lzw.c  tif_next.c  tif_open.c  tif_packbits.c  tif_pixarlog.c  tif_predict.c  tif_predict.h  tif_print.c  tif_stream.cxx  tif_strip.c  tif_thunder.c  tif_version.c  tif_vms.c  tif_warning.c  tif_zip.c  tif_zstd.c  tiffconf.h-vms  tiffconf.h.cmake.in  tiffconf.wince.h  tiffiop.h  uvcode.h
contrib/FreeImage/Source/LibWebP/: ChangeLog  NEWS  PATENTS
contrib/FreeImage/Source/LibWebP/src/dec/: alpha_dec.c  alphai_dec.h  buffer_dec.c  frame_dec.c  quant_dec.c  tree_dec.c  vp8_dec.h  vp8li_dec.h
contrib/FreeImage/Source/LibWebP/src/demux/: anim_decode.c
contrib/FreeImage/Source/LibWebP/src/dsp/: alpha_processing_mips_dsp_r2.c  common_sse2.h  common_sse41.h  cost.c  cpu.c  dec.c  dec_clip_tables.c  dec_mips32.c  dec_mips_dsp_r2.c  dec_neon.c  enc.c  enc_mips32.c  enc_mips_dsp_r2.c  enc_neon.c  enc_sse2.c  enc_sse41.c  filters_sse2.c  lossless.c  lossless_common.h  lossless_enc_mips32.c  lossless_enc_mips_dsp_r2.c  lossless_enc_sse2.c  lossless_enc_sse41.c  lossless_mips_dsp_r2.c  msa_macro.h  neon.h  rescaler_mips32.c  rescaler_mips_dsp_r2.c  upsampling_sse2.c  upsampling_sse41.c  yuv.c  yuv.h  yuv_mips_dsp_r2.c
contrib/FreeImage/Source/LibWebP/src/enc/: backward_references_cost_enc.c  backward_references_enc.h  cost_enc.c  cost_enc.h  filter_enc.c  frame_enc.c  histogram_enc.h  iterator_enc.c  picture_csp_enc.c  predictor_enc.c  quant_enc.c  token_enc.c  vp8i_enc.h
contrib/FreeImage/Source/LibWebP/src/mux/: anim_encode.c  muxedit.c  muxread.c
contrib/FreeImage/Source/LibWebP/src/utils/: bit_reader_inl_utils.h  bit_reader_utils.c  bit_writer_utils.c  bit_writer_utils.h  color_cache_utils.h  endian_inl_utils.h  filters_utils.c  filters_utils.h  huffman_encode_utils.c  huffman_utils.c  huffman_utils.h  rescaler_utils.c  rescaler_utils.h  thread_utils.c  thread_utils.h  utils.c
contrib/FreeImage/Source/LibWebP/src/webp/: demux.h  format_constants.h  mux.h
contrib/FreeImage/Source/Metadata/: FIRational.h  FreeImageTag.h  TagLib.cpp
contrib/FreeImage/Source/OpenEXR/: OpenEXR.2013.vcxproj.filters  OpenEXR.2017.vcxproj
contrib/FreeImage/Source/OpenEXR/IlmThread/: IlmThreadMutex.cpp  IlmThreadSemaphore.cpp
contrib/FreeImage/Source/ZLib/: ChangeLog  adler32.c  compress.c  deflate.c  zutil.h
include/: .clang-format  CmdLineParams.h  CmdLineParamsEnum.h
include/GL/: gl3w.h  glcorearb.h  glext.h  glxext.h  glxtokens-backup.h  wglext.h
include/betsy/: CpuImage.h  Encoder.h  EncoderBC1.h  EncoderBC4.h  EncoderBC6H.h  EncoderEAC.h  EncoderETC1.h  EncoderETC2.h  EncoderGL.h  IncludeParser.h  Shaders.h
include/betsy/File/: FormatKTX.h
include/betsy/GL/: EncoderBC1.h  EncoderBC4.h  EncoderBC6H.h  EncoderEAC.h  EncoderETC1.h  EncoderETC2.h  EncoderGL.h  Shaders.h
include/sds/: sds_algorithm.h  sds_fstream.h  sds_fstreamNsud.h
scripts/: format.sh
scripts/EnumIterator/: EnumIterator.py  Run.py
shaders/: CrossPlatformSettings_piece_all.glsl  UavCrossPlatform_piece_all.glsl  bc1.glsl  bc4.glsl  bc6h.glsl  dither555.glsl  eac.glsl  eac_r11.glsl  etc1.glsl  etc2_p.glsl  etc2_rgb_selector.glsl  etc2_rgba_stitch.glsl  etc2_th.glsl  etc2_th_find_best_c0c1_k_means.glsl
src/: AmalgamationEnum.cpp  CMakeLists.txt  PlatformGL.cpp  main.cpp
src/app/: AmalgamationEnum.cpp  CMakeLists.txt  CmdLineParams.h  CmdLineParamsEnum.h  main.cpp
src/betsy/: CpuImage.cpp  EncoderBC1.cpp  EncoderBC4.cpp  EncoderBC6H.cpp  EncoderEAC.cpp  EncoderETC1.cpp  EncoderETC2.cpp  EncoderGL.cpp  IncludeParser.cpp  out.ktx
src/betsy/File/: FormatKTX.cpp  out.ktx
src/lib/: BC1_tables.inl  CMakeLists.txt  CpuImage.cpp  ETC1_tables.inl  EncoderBC1.cpp  EncoderBC4.cpp  EncoderBC6H.cpp  EncoderEAC.cpp  EncoderETC1.cpp  EncoderETC2.cpp  EncoderGL.cpp  PlatformGL.cpp  gl3w.cpp
src/lib/File/: FormatKTX.cpp
src/lib/GL/: EncoderBC1.cpp  EncoderBC4.cpp  EncoderBC6H.cpp  EncoderEAC.cpp  EncoderETC1.cpp  EncoderETC2.cpp  EncoderGL.cpp
src/sds/: sds_fstream.cpp  sds_fstreamNsud.mm
tests/: CMakeLists.txt
tools/: CMakeLists.txt
tools/shader-processor/: IncludeParser.cpp  IncludeParser.h  main.cpp
(+99 files in other folders)
